# TensorflowLite_Android_Cpp_Example

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/tensorflowlite_android_cpp_example/: ExampleInstrumentedTest.java
app/src/androidTest/java/io/seeso/example/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.h  native-lib.cpp
app/src/main/java/com/example/tensorflowlite_android_cpp_example/: MainActivity.java
app/src/main/java/io/seeso/example/: CameraActivity.java  CameraConnectionFragment.java  DetectorActivity.java  LegacyCameraConnectionFragment.java
app/src/main/java/io/seeso/example/customview/: AutoFitTextureView.java  OverlayView.java  ResultsView.java
app/src/main/java/io/seeso/example/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java
app/src/main/java/io/seeso/example/tracking/: MultiBoxTracker.java
app/src/main/res/layout/: activity_main.xml  tfe_od_camera_connection_fragment_tracking.xml  tfe_od_layout_bottom_sheet.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/tensorflowlite_android_cpp_example/: ExampleUnitTest.java
app/src/test/java/io/seeso/example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_cpp_wrapper/: build.gradle
lib_cpp_wrapper/src/main/: AndroidManifest.xml
lib_cpp_wrapper/src/main/cpp/: CMakeLists.txt  detector.cc  detector.h  log.h  native-lib.cpp
lib_cpp_wrapper/src/main/java/com/example/lib_cpp_wrapper/: Detector.java
lib_cpp_wrapper/src/main/java/io/seeso/lib_cpp_wrapper/: Detector.java
